[package]
name = "witx-test"
version = "0.1.0"
authors = ["Pat Hickey <phickey@fastly.com>"]
edition = "2018"

[[bin]]
name = "witx-test"
path = "src/main.rs"

[dependencies]
witx = { path = "wasi-libc/tools/wasi-headers/WASI/tools/witx" }
proptest = "0.9.4"
wasi-headers = { path = "wasi-libc/tools/wasi-headers" }
tempfile = "3.0"
